--- a/Cookies.html
+++ b/Cookies.html
@@ -1,146 +1,97 @@
-<htnl>
-    <head>
-        <link rel="stylesheet" href="cookies.css">
-        </head>
-        <body>
-            <div class="header" >
-                <h2 class="h2">Romamchur</h2>
+<!DOCTYPE html>
+
+<html lang="en">
+
+<head>
+    <link rel="stylesheet" href="cookies.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
+
+<body>
+    <div class="container">
+        <div class="header">
+            <h2 class="h2">Romamchur</h2>
+        </div>
+
+        <ol class="mainList" id="mainList">
+        </ol>
+        <div class="history" id="history">
+            <input class="historyInput" id="historyInput" type="text" placeholder="write some text">
+            <button class="send btn-info" onclick="historyMessage()">Send</button>
+        </div>
+        <div class="footer">
+            <button class="historyButton btn-primary" id="historyButton" onclick="openHistory()">Open History</button>
+            <button class="historyButton2 btn-primary" id="historyButton2" onclick="closeHistory()">Close History</button>
+            <!-- Trigger/Open The Modal -->
+            <button id="myScale" class="btn-primary">MyScale</button>
+
+            <!-- The Modal -->
+            <div id="myModal" class="modal">
+
+                <!-- Modal content -->
+                <div class="modal-content">
+                    <span class="close">&times;</span>
+                    <p>You have:</p>
+                    <p id="demo"></p>
+                    <script>
+
+                    </script>
+
+                </div>
+
             </div>
-            <ol class="mainList" id="mainList">
-                <li>Hello!</li>
-            </ol>
-            <div class="footer">
-                
+
+            <button id="createTask" class="btn-primary">Create Task</button>
+
+            <!-- The Modal -->
+            <div id="modalCreateTask" class="modalCreateTask">
+
+                <!-- Modal content -->
+                <div class="modal-contentCreateTask">
+                    <span class="closeCreateTask">&times;</span>
+                    <input type="text" class="inputCreateTaskName" id="inputCreateTaskName" placeholder="Write name of your task" required autofocus>
+                    <input type="number" class="inputCreateTaskPoints" id="inputCreateTaskPoints" placeholder="How much points you want get over this task?"
+                        required>
+                    <button class="createTaskButton btn-success" id="createTaskButton" onclick="makeUl()">CreateTask</button>
+
+
+                </div>
+
+
+
+            </div>
+            <div class="optionsDiv" id="optionsDiv">
                 <!-- Trigger/Open The Modal -->
-<button id="myScale">MyScale</button>
+                <button id="options" class="btn-primary">Options</button>
 
-<!-- The Modal -->
-<div id="myModal" class="modal">
+                <!-- The Modal -->
+                <div id="optionsModal" class="optionsModal">
 
-  <!-- Modal content -->
-  <div class="modal-content">
-    <span class="close">&times;</span>
-    <p>You have:</p>
-    <p id="demo"></p>
-    <script>
-    var x=0;
-    document.getElementById("demo").innerHTML=x+" "+ "points"
-    </script>
-    
-  </div>
+                    <!-- Modal content -->
+                    <div class="optionsModal-content">
+                        <span class="optionsClose">&times;</span>
+                        <label class="labelSort">How to sort my list:</label>
+                        <button class="buttonSortOne btn-primary">
+sort from lowest to highest value </button>
+                        <button class="buttonSortTwo btn-primary">
+sort from highest to lowest value</button>
+                        <button class="buttonSortAlphabetically btn-primary">sort alphabetically</button>
+                    </div>
 
-</div>
-<script>
-                // Get the modal
-var modal = document.getElementById('myModal');
-
-// Get the button that opens the modal
-var btn = document.getElementById("myScale");
-
-// Get the <span> element that closes the modal
-var span = document.getElementsByClassName("close")[0];
-
-// When the user clicks on the button, open the modal 
-btn.onclick = function() {
-    modal.style.display = "block";
-}
-
-// When the user clicks on <span> (x), close the modal
-span.onclick = function() {
-    modal.style.display = "none";
-}
-
-// When the user clicks anywhere outside of the modal, close it
-window.onclick = function(event) {
-    if (event.target == modal) {
-        modal.style.display = "none";
-    }
-}
-//nUMBER 2 
-                </script>
-<button id="createTask">Create Task</button>
-
-<!-- The Modal -->
-<div id="modalCreateTask" class="modalCreateTask">
-
-  <!-- Modal content -->
-  <div class="modal-contentCreateTask">
-    <span class="closeCreateTask">&times;</span>
-    <input type="text" class="inputCreateTaskName" id="inputCreateTaskName" placeholder="Write name of your task" required autofocus>
-    <input type="number" class="inputCreateTaskPoints" id="inputCreateTaskPoints" placeholder="How much points you want get over this task?" required>
-    <button class="createTaskButton" id="createTaskButton"  onclick="makeUl()">CreateTask</button>
-    <script>
-        function makeUl(){    
-        var nameOfTask=document.getElementById("inputCreateTaskName").value;
-        var points=document.getElementById("inputCreateTaskPoints").value;
-        var myLi = document.createElement("li");
-        myLi.innerHTML=nameOfTask + "                 " + points+"points" ;
-        myLi.style.margin="35px";
-        mainList.appendChild(myLi);
-        var removeButton = document.createElement("button");
-        myLi.appendChild(removeButton);
-        removeButton.style.background="red";
-        removeButton.innerHTML="Remove task";
-        removeButton.style.position="absolute";
-        removeButton.style.top=myLi.style.top;
-        removeButton.style.width="70px";
-        removeButton.style.height="30px";
-        removeButton.onclick="removeButton()";
-        var completeButton=document.createElement("button");
-        myLi.appendChild(completeButton);
-        completeButton.style.background="red";
-        completeButton.innerHTML="I completed the task";
-        completeButton.style.position="absolute";
-        completeButton.style.top=myLi.style.top;
-        completeButton.style.width="70px";
-        completeButton.style.height="30px";
-        completeButton.style.left="250px";
-        completeButton.onclick="completeButton()"
-        var failedButton=document.createElement("button");
-        myLi.appendChild(failedButton);
-        failedButton.style.background="red";
-        failedButton.innerHTML="I failed the task"
-        failedButton.style.position="absolute";
-        failedButton.style.top=myLi.style.top;
-        failedButton.style.width="70px";
-        failedButton.style.height="35px";
-        failedButton.style.left="350px";
-        failedButton.onclick="failedButton()";
-        modalCreateTask.style.display = "none";
-
-        function failedButton(){
-            mainlist.removeChild(myLi);     
-        }
-        }
-        </script>
-  </div>
-  <script>
-                // Get the modal
-var modalCreateTask = document.getElementById('modalCreateTask');
-
-// Get the button that opens the modal
-var btnCreateTask = document.getElementById("createTask");
-
-// Get the <span> element that closes the modal
-var spanCreateTask = document.getElementsByClassName("closeCreateTask")[0];
-
-// When the user clicks on the button, open the modal 
-btnCreateTask.onclick = function() {
-    modalCreateTask.style.display = "block";
-}
-
-// When the user clicks on <span> (x), close the modal
-spanCreateTask.onclick = function() {
-    modalCreateTask.style.display = "none";
-}
-
-// When the user clicks anywhere outside of the modal, close it
-window.onclick = function(event) {
-    if (event.target == modal) {
-        modalCreateTask.style.display = "none";
-    }
-}
-                </script>
-
+                </div>
+            </div>
+            <script src="cookies.js">              
+            </script>
+        </div>
 </body>
-</html>  
+
+</html>
